# Test_self_statistics

./: .gitignore  Readme.md  main.py  pyproject.toml
.github/workflows/: apisec-scan-analysis.yml  codeql-analysis.yml  ossar-analysis.yml
certs/ssl/: device.key  testFNS.pem
docker/: docker-compose.local.yml
docker/django/: Dockerfile  local-entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
envs/: production.env  test.env
main/: admin.py  api.py  models.py  urls.py
main/clients/: FNS.py  __init__.py
main/migrations/: 0001_initial.py
main/schemes/: tg_chat.py  tg_message.py  tg_user.py
main/services/: __init__.py  qrcodes.py  telegram.py
server/: settings.py  urls.py
server/main/clients/: FNS.py  __init__.py
server/settings/: __init__.py
