[tool.poetry]
name = "testfns"
version = "0.1.0"
description = ""
authors = ["Rezin.PV <p.rezin@limecreditgroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
